<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cm_edittext_bg"
                android:hint="Họ"
                android:maxLines="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/cm_edittext_bg"
                android:maxLines="1"

                android:hint="Tên"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sex"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <AutoCompleteTextView
                android:id="@+id/etSex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cm_edittext_bg"
                android:hint="@string/sex"
                android:inputType="none"

                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:background="@drawable/cm_edittext_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:background="@drawable/cm_edittext_bg"
            android:hint="@string/password"
            android:inputType="textPassword"

            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:background="@drawable/cm_edittext_bg"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"

            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cm_button_bg"
            android:text="Đăng ký"
            android:textSize="16sp"
            android:textStyle="bold"

            android:layout_marginTop="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />
    </LinearLayout>
</ScrollView>